# system-intelligence-benchmark

./: README.md
benchmarks/arteval_bench/: .gitignore  README.md  env.toml  run_ae_agent_smoke_test.sh
benchmarks/arteval_bench/data/benchmark/: README_ae_agent.md  ae_agent_smoke_test.jsonl  arteval_tasks.jsonl  run_ae_agent.sh
benchmarks/arteval_bench/data/benchmark/ae_agent_smoke/: README.md  README_SMOKE_TEST.md
benchmarks/arteval_bench/data/benchmark/eurosys25_depsurf/depsurf/: 00_deps.ipynb  10_links.ipynb  11_download.ipynb  20_dataset.ipynb  30_diff.ipynb  35_src.ipynb  36_breakdown.ipynb  39_config.ipynb  40_inline.ipynb  41_transform.ipynb  42_dup.ipynb  50_programs.ipynb  51_plot.ipynb  52_summary.ipynb  60_website.ipynb  LICENSE  README.md  pyproject.toml
benchmarks/arteval_bench/data/benchmark/eurosys25_depsurf/depsurf/archive/: 55_category.ipynb  91_test_diff.ipynb  92_test_sections.ipynb  93_test_funcs.ipynb  95_test_relo.ipynb  README.md
benchmarks/arteval_bench/data/benchmark/eurosys25_depsurf/depsurf/archive/depsurf/: bpftool.py  relo.py
benchmarks/arteval_bench/data/benchmark/eurosys25_depsurf/depsurf/archive/test-bpf/: CMakeLists.txt  Makefile  README.md  ebpf.bpf.c  ebpf.cpp
benchmarks/arteval_bench/data/benchmark/eurosys25_depsurf/depsurf/archive/test-bpf/tests/: count.bpf.c  dents.bpf.c  fault.bpf.c  helper.bpf.c  hex_dump.h  relocation.bpf.c
benchmarks/arteval_bench/data/benchmark/eurosys25_depsurf/depsurf/archive/vm/: Makefile  init.c
benchmarks/arteval_bench/data/benchmark/eurosys25_depsurf/depsurf/archive/vm/distro/: README.md  prep.py  run.py  ssh.py
benchmarks/arteval_bench/data/benchmark/eurosys25_depsurf/depsurf/data/: .gitignore
benchmarks/arteval_bench/data/benchmark/eurosys25_depsurf/depsurf/depsurf/: __init__.py  bpf_program.py  dep.py  issues.py  linux_image.py  paths.py  prep.py  report.py  version.py  version_group.py  version_pair.py
benchmarks/arteval_bench/data/benchmark/eurosys25_depsurf/depsurf/depsurf/btf/: __init__.py  bpftool.patch  bpftool.py  dump.py  kind.py  types.py
benchmarks/arteval_bench/data/benchmark/eurosys25_depsurf/depsurf/depsurf/diff/: __init__.py  change.py  diff_common.py  diff_config.py  diff_enum.py  diff_func.py  diff_struct.py  diff_tracepoint.py
benchmarks/arteval_bench/data/benchmark/eurosys25_depsurf/depsurf/depsurf/funcs/: __init__.py  dwarf.py  dwarf_dump.py  entry.py  group.py  groups.py  symbol.py
benchmarks/arteval_bench/data/benchmark/eurosys25_depsurf/depsurf/depsurf/linux/: __init__.py  comment.py  config.py  extract.py  filebytes.py  struct.py  symtab.py  syscalls.py  tracepoint.py
benchmarks/arteval_bench/data/benchmark/eurosys25_depsurf/depsurf/depsurf/utils/: __init__.py  color.py  decorator.py  enum.py  system.py
benchmarks/arteval_bench/data/benchmark/eurosys25_depsurf/depsurf/utils/: __init__.py  consts.py  paths.py  utils_latex.py  utils_matplotlib.py  utils_pandas.py  utils_pickle.py
benchmarks/arteval_bench/src/: main.py  run_eval_in_env.py  utils.py
benchmarks/arteval_bench/src/agents/ae_agent/: README.md  __init__.py  install.sh  interactive_runner.py  main.py  run_eval.py  runner.py  (+2 more)
doc/: creating_benchmark.md
sdk/: utils.py
(+16 files in other folders)
